--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <Hr style="color: blanchedalmond;"></Hr>
 
     <footer class="loc" id="location">
-        <p style=" text-decoration: underline; color: burlywood; font-size: 25px; text-align: center; padding: 10px; font-family: 'Grenze Gotisch', cursive;">Address</p>
+        <p style=" text-decoration: underline; color: burlywood; font-size: 25px; text-align: center; padding: 10px; font-family: 'Grenze Gotisch', cursive;">Address :</p>
       <div id='foot'>
           <div style="text-decoration: underline; padding: 15px; margin-bottom: 5px;">Main Branch :</div>
         <div>Mom's bakery</div>
