--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="na">
         <nav class='navbar' id=home>
-            <img src="img/logo1.png" id="im">
+            <img src="img/logo1.PNG" id="im">
             <ul class="cont">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
