--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <section class='head'>
         <div>
-            <img class="imm1" src="../img/logo.png" alt="">
+            <img class="imm1" src="../img/logo.PNG" alt="">
         </div>
         <div class="he">
             <p style = "font-family: 'Grenze Gotisch', cursive;">
