--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#Menu">Menu</a></li>
-                <!-- <li><a href="#">Feedback us</a></li> -->
+                <li><a href="https://forms.gle/yvPSUEQXtRTr9pog9" target="_blank">Feedback us</a></li>
                 <li><a href="#location">Location</a></li>
             </ul>
 
